preview screen of next release (the pre beta)

--- a/index.html
+++ b/index.html
@@ -1,82 +1,78 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
+<meta charset="utf-8"/>
+<title>sams/Thematic-html5boilerplate @ GitHub</title>
+<link rel="stylesheet" href="css/style.css" type="text/css" />
+<style type="text/css">
+	body { margin-top: 1.0em; }
+	section, figure, figcaption, hgroup, footer, header, .download dt { display: block; }
+	#container { margin: 0 auto; width: 960px; }
+	h1 { font-size: 3.8em; color: #090712; margin-bottom: 3px; }
+	h1 .small { font-size: 0.4em; }
+	h1 a { text-decoration: none }
+	h2 { font-size: 1.5em; color: #090712; }
+	h3 { text-align: center; color: #090712; }
+	a { color: #090712; }
+	.description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+	.download { float: right; width: 170px; }
+	.download dt { font-size: 148%; padding-right: 1.2em; text-align: center }
+	.download dd { margin-left: 0; display:inline; float:left; width:38.5%; }
+	pre { background: #000; color: #fff; padding: 15px;}
+	hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
+	.footer { text-align:center; padding-top:30px; font-style: italic; }
+	article h1 { font-size:26px; line-height:1.618em; }
+</style>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>sams/Thematic-html5boilerplate @ GitHub</title>
+<a href="http://github.com/sams/Thematic-html5boilerplate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<section id="container">
+	<header>
+		<dl class="download">
+			<dt>Downloads</dt>
+			<dd><a href="http://github.com/sams/Thematic-html5boilerplate/zipball/master">
+			  <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a></dt>
+			<dd><a href="http://github.com/sams/Thematic-html5boilerplate/tarball/master">
+			  <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a></dd>
+		</dl>
+		<hgroup>
+			<h1><a href="http://github.com/sams/Thematic-html5boilerplate">Thematic-html5boilerplate</a>
+				<span class="small">by <a href="http://github.com/sams">sams</a></span></h1>
+
+			<h2 class="description">
+				A Thematic theme for Wordpress using the goodness of HTML5 Boilerplate
+			</h2>
+		</hgroup>
+	</header>
+	<article>
+		<header>
+			<h1>HTML5Boilerplate 0.3a (pushing soon) The Pre Beta</h1>
+		</header>
+		<figure>
+			<img src="images/ie.png" />
+			<figcaption>A Screen shot of HTML5 Boilerplate in ie8</figcaption>
+		</figure>
+		<h1>Features</h1>
+		<p>More support for more plugins; additional controls for elements that are often customised; better use of wp hooks and more power in general.</p>
+		<ul>
+			<li>a gallery (basic and highly customisable jquery powered gallery)</li>
+			<li>use of PHPThumb by Master Exploder</li>
+			<li>tighter preset styles (within liquid options and grid debug)</li>
+			<li>Out of the Zip support for popular and powerful wp-plugins such as Minify, WP-Supercache &amp; White Label CMS</li>
+			<li>Childthemes (customise the theme as a child of this theme to make upgrades easier)</li>
+			<li>Moving towards the inclusion of Brian Blakelys head elements</li>
+			<li>Scores well in YSLow and Google Page Speed; these results have been confirmed by Vertain and Website Optimization Analysis Tools</li>
+		</ul>
+	</article>
+
+	<p>Combing the html5 boilerplate, OOCSS & wordpress.  With builtin support for a whole verity of plugins - and more</p><h2>Install</h2>
+	<p>Install the latest tagged version as per normal wordpress theme installion instructions</p>
+
+	<h2>Author &amp; Contact</h2>
+	<p>Sam Sherlock (sam.sherlock@gmail.com)</p>
 	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #f6f8ed;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #090712; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #090712; }
-    h3 { text-align: center; color: #090712; }
-    a { color: #090712; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
-</head>
-
-<body>
-  <a href="http://github.com/sams/Thematic-html5boilerplate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/sams/Thematic-html5boilerplate/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/sams/Thematic-html5boilerplate/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/sams/Thematic-html5boilerplate">Thematic-html5boilerplate</a>
-      <span class="small">by <a href="http://github.com/sams">sams</a></span></h1>
-
-    <div class="description">
-      A Thematic theme for Wordpress using the goodness of HTML5 Boilerplate
-    </div>
-
-    <p>Combing the html5 boilerplate, OOCSS & wordpress.  With builtin support for a whole verity of plugins - and more</p><h2>Install</h2>
-<p>Install the latest tagged version as per normal wordpress theme installion instructions</p>
-<h2>Authors</h2>
-<p>Sam (hello@samsherlock.com)<br/>Sam Sherlock (sam.sherlock@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Sam Sherlock (sam.sherlock@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/sams/Thematic-html5boilerplate/zipball/master">zip</a> or
-      <a href="http://github.com/sams/Thematic-html5boilerplate/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/sams/Thematic-html5boilerplate</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/sams/Thematic-html5boilerplate">sams/Thematic-html5boilerplate</a>
-    </div>
-
-  </div>
-
-  
-</body>
-</html>
+	<h2>Download</h2>
+	<p>You can download this project in either <a href="http://github.com/sams/Thematic-html5boilerplate/zipball/master">zip</a> or <a href="http://github.com/sams/Thematic-html5boilerplate/tarball/master">tar</a> formats.</p>
+	<p>You can also clone the project with <a href="http://git-scm.com">Git</a> by running: <pre>$ git clone git://github.com/sams/Thematic-html5boilerplate</pre></p>
+	<footer>
+		<small>get the source code on GitHub : <a href="http://github.com/sams/Thematic-html5boilerplate">sams/Thematic-html5boilerplate</a></small>
+	</footer>
+</section>
